2004-03-21  Nathan J. Williams  <nathanw@wasabisystems.com>

	* mipsnbsd-tdep.c: Update copyright. Include "mips-tdep.h".
	* Makefile.in (mipsnbsd-tdep.o): Update dependencies.

2004-03-21  Andrew Cagney  <cagney@redhat.com>

	* frame-unwind.h: Update copyright.
	(struct frame_data): Add opaque declaration.
	(frame_sniffer_ftype): Declare.
	(struct frame_unwind): Add "unwind_data" and "sniffer".
	(frame_unwind_register_unwinder): Declare.
	(frame_unwind_find_by_frame): Add parameter "this_cache".
	* frame.c (get_frame_id, create_new_frame, legacy_get_prev_frame)
	(legacy_get_prev_frame, legacy_get_prev_frame)
	(get_frame_type): Pass the prologue_cache to
	frame_unwind_find_by_frame.
	* frame-unwind.c (struct frame_unwind_table_entry): Add field
	"unwinder".
	(frame_unwind_register_unwinder): New function.
	(frame_unwind_find_by_frame): Handle an unwind sniffer.

2004-03-20  Paul Hilfinger  <hilfingr@nile.gnat.com>

	* bcache.c (print_percentage): Use floating point to avoid
	incorrect results when portion*100 overflows.

2004-03-19  Kevin Buettner  <kevinb@redhat.com>

	* ppc_tdep.h (ppc_linux_frame_saved_pc)
	(ppc_linux_init_extra_frame_info)
	(ppc_linux_frameless_function_invocation)
	(ppc_linux_frame_init_saved_regs, ppc_linux_frame_chain)
	(rs6000_frame_saved_pc, rs6000_init_extra_frame_info)
	(rs6000_frameless_function_invocation, rs6000_frame_init_saved_regs)
	(rs6000_frame_chain): Delete declarations.
	* ppc-linux-tdep.c (ppc_linux_frame_saved_pc)
	(ppc_linux_init_extra_frame_info)
	(ppc_linux_frameless_function_invocation)
	(ppc_linux_frame_init_saved_regs, ppc_linux_frame_chain): Delete.
	(ppc_linux_init_abi): Remove registration of above deleted functions.
	* rs6000-tdep.c (rs6000_init_extra_frame_info)
	(rs6000_frame_init_saved_regs, rs6000_init_frame_pc_first)
	(rs6000_frame_args_address, rs6000_saved_pc_after_call)
	(rs6000_pop_frame, rs6000_frameless_function_invocation)
	(rs6000_frame_saved_pc, rs6000_frame_chain): Delete.